# adsbledmatrix

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  lifespan.py  main.py  models.py
backend/app/api/: aircraft.py  config.py  display.py  layouts.py  system.py  websocket.py
backend/app/services/: adsb_receiver.py  aircraft_db.py  aircraft_interest.py  changelog.py  device_id.py  device_id_test.py  display_engine.py  display_selection.py  geocalc.py  layout_loader.py  logo_manager.py  onboarding_display.py  readsb_service_manager.py  rollout.py  route_service.py  sighting_history.py  timezone.py  update_progress.py  updater.py
backend/app/static/: index.html
backend/app/static/assets/: index-1NHC8APC.js  index-A8btPKHd.js  index-AErgJieZ.css  index-B3hl-_lv.css  index-BANfU58V.css  index-BCLx-qqH.css  index-BKPYEk6j.js  index-BMYH7wf_.css  index-BPS0W1KQ.js  index-BTiFf1F5.js  index-BhtaXotA.css  index-BkPizb3I.js  index-BwxqYhVn.js  index-C0hYXJFX.css  index-CElTEMwq.js  (+34 more)
backend/tests/: conftest.py  test_adsb_receiver.py  test_aircraft_interest.py  test_changelog.py  test_config.py  test_device_id.py  test_display_api.py  test_display_engine.py  test_display_selection.py  test_layout_validator.py  test_layouts.py  test_led_config.py  test_logo_manager.py  test_onboarding_display.py  test_readsb_service_manager.py  test_rollout.py  test_sighting_history.py  test_system.py  test_timezone.py  test_update_progress.py  test_updater.py  test_wifi_manager_scan.py
(+136 files in other folders)
